@@ -70,6 +70,7 @@ following names for their contribution to the product.
 * Marooned
 * Max Semenik
 * Michael De La Rue
+* Michael Walsh
 * Mike Horvath
 * Mormegil
 * Nakon
