@@ -4543,7 +4543,11 @@ class Parser
 			// Output the replacement text
 			// Add two newlines on -- trailing whitespace in $newText is conventionally
 			// stripped by the editor, so we need both newlines to restore the paragraph gap
-			$outText .= $newText . "\n\n";
+			// Only add trailing whitespace if there is newText
+			if($newText != "") {
+				$outText .= $newText . "\n\n";
+			}
+
 			while ( $node ) {
 				$outText .= $frame->expand( $node, PPFrame::RECOVER_ORIG );
 				$node = $node->getNextSibling();
